--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1,10 +1,10 @@
 /******************************************************************************* Variables used throughout the theme. To adjust anything, simply edit the variables below and rebuild the theme. *****************************************************************************/
 /******************************************************************************* Themes *****************************************************************************/
-:root { --global-bg-color: #ffffff; --global-text-color: #000000; --global-theme-color: #2698BA; --global-hover-color: #2698BA; --global-footer-bg-color: #1e1e1e; --global-footer-text-color: #e8e8e8; --global-footer-link-color: #ffffff; --global-icon-color: #1e1e1e; }
+:root { --global-bg-color: #ffffff; --global-text-color: #000000; --global-theme-color: #2698BA; --global-hover-color: #2698BA; --global-footer-bg-color: #ffffff; --global-footer-text-color: #000000; --global-footer-link-color: #000000; --global-icon-color: #1e1e1e; --global-header-icon-color: #2698BA; }
 :root .fa-sun { display: none; }
 :root .fa-moon { padding-left: 10px; padding-top: 12px; display: block; }
 
-html[data-theme='dark'] { --global-bg-color: #1e1e1e; --global-text-color: #e8e8e8; --global-theme-color: #2698BA; --global-hover-color: #2698BA; --global-footer-bg-color: #e8e8e8; --global-footer-text-color: #1e1e1e; --global-footer-link-color: #000000; --global-icon-color: #e8e8e8; }
+html[data-theme='dark'] { --global-bg-color: #1e1e1e; --global-text-color: #e8e8e8; --global-theme-color: #66c4e0; --global-hover-color: #66c4e0; --global-footer-bg-color: #1e1e1e; --global-footer-text-color: #e8e8e8; --global-footer-link-color: #e8e8e8; --global-icon-color: #e8e8e8; --global-header-icon-color: #2698BA; }
 html[data-theme='dark'] .fa-sun { padding-left: 10px; padding-top: 12px; display: block; }
 html[data-theme='dark'] .fa-moon { display: none; }
 
@@ -39,7 +39,7 @@ a:hover:after, table.table a:hover:after { width: 100%; }
 .caption { font-size: 0.875rem; margin-top: 0.75rem; margin-bottom: 1.5rem; text-align: center; }
 
 .profile { margin-left: 1rem; width: 100%; }
-.profile .address { margin-bottom: 5px; margin-top: 5px; font-family: monospace; font-size: 1.2rem; }
+.profile .address { margin-bottom: 5px; margin-top: 5px; font-size: 0.875rem; font-style: italic; text-align: center; }
 .profile .address p { display: inline-block; margin: 0; }
 
 @media (min-width: 576px) { .profile { width: 30%; }
@@ -60,7 +60,8 @@ a:hover:after, table.table a:hover:after { width: 100%; }
 .navbar.navbar-light .navbar-nav .nav-item.active > .nav-link { background-color: inherit; font-weight: bolder; color: var(--global-theme-color); }
 .navbar.navbar-light .navbar-nav .nav-item.active > .nav-link:hover { color: var(--global-hover-color); }
 .navbar.navbar-light .contact-icon { font-size: 2rem; }
-.navbar.navbar-light .contact-icon a:hover { color: var(--global-hover-color); }
+.navbar.navbar-light .contact-icon a { color: var(--global-header-icon-color); }
+.navbar.navbar-light .contact-icon a:hover { color: var(--global-header-icon-color); }
 
 .navbar-toggler .icon-bar { display: block; width: 22px; height: 2px; background-color: #1e1e1e; border-radius: 1px; margin-bottom: 4px; transition: all 0.2s; }
 .navbar-toggler .top-bar { transform: rotate(45deg); transform-origin: 10% 10%; }
@@ -81,10 +82,10 @@ a:hover:after, table.table a:hover:after { width: 100%; }
 .social .contact-icon a:hover { color: var(--global-theme-color); }
 .social .contact-note { font-size: 0.8rem; }
 
-footer.fixed-bottom { background-color: var(--global-footer-bg-color); font-size: 0.75rem; }
+footer.fixed-bottom { background-color: var(--global-footer-bg-color); border-top: 1px solid #e8e8e8; font-size: 0.75rem; }
 footer.fixed-bottom .container { color: var(--global-footer-text-color); padding-top: 9px; padding-bottom: 8px; }
 footer.fixed-bottom a { color: var(--global-footer-link-color); }
-footer.fixed-bottom a:hover { color: pink; text-decoration: none; }
+footer.fixed-bottom a:hover { color: var(--global-hover-color); text-decoration: none; }
 
 footer.sticky-bottom { border-top: 1px solid #e8e8e8; padding-top: 40px; padding-bottom: 40px; font-size: 0.9rem; }
 
@@ -116,7 +117,7 @@ footer.sticky-bottom { border-top: 1px solid #e8e8e8; padding-top: 40px; padding
 ol.bibliography { list-style: none; padding: 0; margin-top: 0; }
 ol.bibliography li { margin-bottom: 1rem; }
 ol.bibliography li .abbr { height: 2rem; margin-bottom: 0.5rem; }
-ol.bibliography li .abbr abbr { display: inline-block; background-color: var(--global-theme-color); padding-left: 1rem; padding-right: 1rem; }
+ol.bibliography li .abbr abbr { display: inline-block; background-color: var(--global-header-icon-color); padding-left: 1rem; padding-right: 1rem; }
 ol.bibliography li .abbr abbr a { color: white; }
 ol.bibliography li .abbr abbr a:hover { text-decoration: none; }
 ol.bibliography li .abbr .award { color: var(--global-theme-color) !important; border: 1px solid var(--global-theme-color); }
