--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -51,8 +51,9 @@ a, table.table a {
   .address {
     margin-bottom: 5px;
     margin-top: 5px;
-    font-family: monospace;
-    font-size: 1.2rem;
+    font-size: 0.875rem;
+    font-style: italic;
+    text-align: center;
     p {
       display: inline-block;
       margin: 0;
@@ -131,8 +132,9 @@ a, table.table a {
   .contact-icon {
     font-size: 2rem;
     a {
+      color: var(--global-header-icon-color);
       &:hover {
-        color: var(--global-hover-color);
+        color: var(--global-header-icon-color);
       }
     }
   }
@@ -207,6 +209,7 @@ a, table.table a {
 // Footer
 footer.fixed-bottom {
   background-color: var(--global-footer-bg-color);
+  border-top: 1px solid $grey-color-light;
   font-size: 0.75rem;
   .container {
     color: var(--global-footer-text-color);
@@ -216,7 +219,7 @@ footer.fixed-bottom {
   a {
     color: var(--global-footer-link-color);
     &:hover {
-      color: pink;
+      color: var(--global-hover-color);
       text-decoration: none;
     }
   }
@@ -358,7 +361,7 @@ ol.bibliography {
       margin-bottom: 0.5rem;
       abbr {
         display: inline-block;
-        background-color: var(--global-theme-color);
+        background-color: var(--global-header-icon-color);
         padding-left: 1rem;
         padding-right: 1rem;
         a {
