--- a/src/_sass/_themes.scss
+++ b/src/_sass/_themes.scss
@@ -7,10 +7,11 @@
   --global-text-color: #{$black-color};
   --global-theme-color: #{$cyan-color};
   --global-hover-color: #{$cyan-color};
-  --global-footer-bg-color: #{$grey-color-dark};
-  --global-footer-text-color: #{$grey-color-light};
-  --global-footer-link-color: #{$white-color};
+  --global-footer-bg-color: #{$white-color};
+  --global-footer-text-color: #{$black-color};
+  --global-footer-link-color: #{$black-color};
   --global-icon-color: #{$grey-color-dark};
+  --global-header-icon-color: #{$cyan-color};
 
   .fa-sun {
     display : none;
@@ -25,12 +26,13 @@
 html[data-theme='dark'] {
   --global-bg-color: #{$grey-color-dark};
   --global-text-color: #{$grey-color-light};
-  --global-theme-color: #{$cyan-color};
-  --global-hover-color: #{$cyan-color};
-  --global-footer-bg-color: #{$grey-color-light};
-  --global-footer-text-color: #{$grey-color-dark};
-  --global-footer-link-color: #{$black-color};
+  --global-theme-color: #{$light-cyan-color};
+  --global-hover-color: #{$light-cyan-color};
+  --global-footer-bg-color: #{$grey-color-dark};
+  --global-footer-text-color: #{$grey-color-light};
+  --global-footer-link-color: #{$grey-color-light};
   --global-icon-color: #{$grey-color-light};
+  --global-header-icon-color: #{$cyan-color};
 
   .fa-sun {
     padding-left: 10px;
